Import of SHLOMIF/Dist-Zilla-Plugin-Test-TrailingSpace-0.0.2 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-Test-TrailingSpace
gitpan-cpan-version:      0.0.2
gitpan-cpan-path:         SHLOMIF/Dist-Zilla-Plugin-Test-TrailingSpace-0.0.2.tar.gz
gitpan-cpan-author:       SHLOMIF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Dist-Zilla-Plugin-Test-TrailingSpace
 
+v0.0.2  2013-10-13 (SHLOMIF)
+    - Add a SEE ALSO section.
+
 v0.0.1  2013-10-12 (SHLOMIF)
     - First version, released on an unsuspecting world
