--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Dist-Zilla-Plugin-Test-TrailingSpace
 
+v0.0.4  2014-02-02 (SHLOMIF)
+    - Fix the =encoding at the PODs.
+
 v0.0.3  2014-01-27 (SHLOMIF)
     - Add minimal version of perl to prereqs. (CPANTS Kwalitee)
     - Add provides to META.yml (CPANTS Kwalitee)
