Import of SHLOMIF/Dist-Zilla-Plugin-Test-TrailingSpace-0.2.0 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-Test-TrailingSpace
gitpan-cpan-version:      0.2.0
gitpan-cpan-path:         SHLOMIF/Dist-Zilla-Plugin-Test-TrailingSpace-0.2.0.tar.gz
gitpan-cpan-author:       SHLOMIF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Dist-Zilla-Plugin-Test-TrailingSpace
 
+v0.2.0  2014-11-08 (SHLOMIF)
+    - Add the filename_regex parameter.
+
 v0.0.4  2014-02-02 (SHLOMIF)
     - Fix the =encoding at the PODs.
 
